--- a/src/templates/en_CA/common/basic_header.tmpl
+++ b/src/templates/en_CA/common/basic_header.tmpl
@@ -26,6 +26,8 @@
           {else}
           <a class='topbarlink' href="{$app_cgi_location}?op=login">log in</a>
           {/if}
+          &nbsp;|&nbsp;
+          <a class='topbarlink' href='howto.html' target='_new'>help</a>
         </font>
       </td>
     </tr>
