--- a/src/templates/en_CA/League/edit_confirm.tmpl
+++ b/src/templates/en_CA/League/edit_confirm.tmpl
@@ -1,5 +1,5 @@
 {include file="common/basic_header.tmpl"}
-<h1>{$page_title}{if $id}: {$league_name}{/if}</h1>
+<h1>{$page_title}{if $id}: {$league_name}{if $tier}Tier {$tier}{/if}{/if}</h1>
 <p>
 	Confirm that the data below is correct, and hit continue to make your changes.
 </p>
