Clean up league names on team-move pages

--- a/src/templates/en_CA/League/move_team_confirm.tmpl
+++ b/src/templates/en_CA/League/move_team_confirm.tmpl
@@ -10,8 +10,8 @@
   
 	<blockquote>
         You are attempting to move the team <b>{$team_name}</b> from 
-         <b>{$from_league.season} {$from_league.day} {$from_league.name}{if $from_league.tier} {$from_league.tier}{/if}</b> to
-         <b>{$to_league.season} {$to_league.day} {$to_league.name}{if $to_league.tier} {$to_league.tier}{/if}</b>.  If this is correct, please click "Submit" below.
+         <b>{$from_league.name}{if $from_league.tier} Tier {$from_league.tier}{/if}</b> to
+         <b>{$to_league.name}{if $to_league.tier} Tier {$to_league.tier}{/if}</b>.  If this is correct, please click "Submit" below.
         league you wish to move it to.
 	</blockquote>
 <br>
