Consistent titling of pages for "Field Site"

--- a/src/templates/en_CA/Site/edit_confirm.tmpl
+++ b/src/templates/en_CA/Site/edit_confirm.tmpl
@@ -1,5 +1,5 @@
 {include file="common/basic_header.tmpl"}
-<h1>{if $id}Editing {$site.name}{else}Create New Field{/if}</h1>
+<h1>{if $id}Editing {$site.name}{else}Create New Field Site{/if}</h1>
 <p>
 	Confirm that the data below is correct, and hit continue to make your changes.
 </p>
