--- a/src/templates/en_CA/Site/edit_form.tmpl
+++ b/src/templates/en_CA/Site/edit_form.tmpl
@@ -1,5 +1,5 @@
 {include file="common/basic_header.tmpl"}
-<h1>{if $id}Editing {$site.name}{else}Create New Site{/if}</h1>
+<h1>{if $id}Editing {$site.name}{else}Create New Field Site{/if}</h1>
 
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
