--- a/src/templates/en_CA/Field/edit_form.tmpl
+++ b/src/templates/en_CA/Field/edit_form.tmpl
@@ -1,26 +1,45 @@
 {include file="common/basic_header.tmpl"}
-<h1>{if $id}Editing {$field_name}{else}Create New Field{/if}</h1>
-{if $error_message}
-<blockquote>
-	{$error_message}
-</blockquote>
-{/if}
+<h1>{if $id}Editing {$field.site_name} {$field.num}{else}Create New Field{/if}</h1>
 
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
 	<input type="hidden" name="step" value="confirm">
 {if $id}
 	<input type="hidden" name="id" value="{$id}">
+{else}
+	<input type="hidden" name="field[site_id]" value="{$field.site_id}">
 {/if}
 <table border="0">
     <tr>
-      <td class='row_title'>Field Name:</td> 
-      <td class='row_data'><input type="text" name="field_name" size="35" value="{$field_name}"></td>
+      <td class='row_title'>Site Name:</td> 
+      <td class='row_data'>{$field.site_name} ({$field.site_code})</td>
     </tr>
     <tr>
-      <td class='row_title'>Website:</td> 
-      <td class='row_data'><input type="text" name="field_website" size="35" value="{$field_website}"></td>
+      <td class='row_title'>Field Number:</td> 
+      <td class='row_data'><input type="text" name="field[num]" size="2" value="{$field.num}"></td>
     </tr>
+    
+    <tr>
+      <td class='row_title' valign='top'>Status:</td> 
+      <td class='row_data'>
+        <input type="radio" name="field[status]" value="open" {if $field.status eq 'open'}checked{/if}>open<br />
+        <input type="radio" name="field[status]" value="closed" {if $field.status eq 'closed'}checked{/if}>closed<br />
+      </td>
+    </tr>
+    
+    <tr>
+      <td class='row_title' valign='top'>Availability:</td> 
+      <td class='row_data'>
+        <input type="checkbox" name="field[availability][]" value="Sunday" {if !is_null(array_search('Sunday',$field.availability))}checked{/if}>Sunday<br />
+        <input type="checkbox" name="field[availability][]" value="Monday" {if !is_null(array_search('Monday',$field.availability))}checked{/if}>Monday<br />
+        <input type="checkbox" name="field[availability][]" value="Tuesday" {if !is_null(array_search('Tuesday',$field.availability))}checked{/if}>Tuesday<br />
+        <input type="checkbox" name="field[availability][]" value="Wednesday" {if !is_null(array_search('Wednesday',$field.availability))}checked{/if}>Wednesday<br />
+        <input type="checkbox" name="field[availability][]" value="Thursday" {if !is_null(array_search('Thursday',$field.availability))}checked{/if}>Thursday<br />
+        <input type="checkbox" name="field[availability][]" value="Friday" {if !is_null(array_search('Friday',$field.availability))}checked{/if}>Friday<br />
+        <input type="checkbox" name="field[availability][]" value="Saturday" {if !is_null(array_search('Saturday',$field.availability))}checked{/if}>Saturday<br />
+      </td>
+    </tr>
+    
 </table>
 <br>
 <input type="submit" name="submit" value="Submit">
