--- a/src/templates/en_CA/Site/view.tmpl
+++ b/src/templates/en_CA/Site/view.tmpl
@@ -32,7 +32,15 @@
       <td class='row_data'>
       <ul>
       {foreach name=fields from=$site.fields item=field}
-        <li>{$site.code}{$field.num} ({$field.status}) <a href="{$app_cgi_location}?op=field_view&id={$field.field_id}">view</a> | <a href="{$app_cgi_location}?op=field_edit&id={$field.field_id}">edit</a> | <a href="{$app_cgi_location}?op=field_delete&id={$field.field_id}">delete</a>
+        <li>{$site.code}{$field.num} ({$field.status})
+| <a href="{$app_cgi_location}?op=field_view&id={$field.field_id}">view</a> 
+{if $perm_site_edit}
+| <a href="{$app_cgi_location}?op=field_edit&id={$field.field_id}">edit</a> 
+{/if}
+{if $perm_site_edit}
+| <a href="{$app_cgi_location}?op=field_delete&id={$field.field_id}">delete</a>
+{/if}
+|
       {/foreach}
       </ul>
       </td>
@@ -40,8 +48,12 @@
 </table>
 
 <ul>
+  {if $perm_site_edit}
   <li><a href="{$app_cgi_location}?op=site_edit&id={$id}">edit site</a>.
+  {/if}
+  {if $perm_field_create}
   <li><a href="{$app_cgi_location}?op=field_create&site_id={$id}">add field at this site</a>.
+  {/if}
 </ul>
 
 
