Remaining integration for new field handling

--- a/src/templates/en_CA/Field/edit_confirm.tmpl
+++ b/src/templates/en_CA/Field/edit_confirm.tmpl
@@ -10,6 +10,9 @@
 {if $id}
 	<input type="hidden" name="id" value="{$id}">
 {/if}
+{if $site_id}
+	<input type="hidden" name="site_id" value="{$site_id}">
+{/if}
 	<table border="0">
     <tr>
       <td class='row_title'>Site Name:</td> 
