--- a/src/templates/en_CA/Field/edit_form.tmpl
+++ b/src/templates/en_CA/Field/edit_form.tmpl
@@ -7,7 +7,7 @@
 {if $id}
 	<input type="hidden" name="id" value="{$id}">
 {else}
-	<input type="hidden" name="field[site_id]" value="{$field.site_id}">
+	<input type="hidden" name="site_id" value="{$field.site_id}">
 {/if}
 <table border="0">
     <tr>
