--- a/src/templates/en_CA/Site/edit_confirm.tmpl
+++ b/src/templates/en_CA/Site/edit_confirm.tmpl
@@ -20,6 +20,10 @@
       <td class='row_data'><input type="hidden" name="site[code]" value="{$site.code}">{$site.code}</td>
     </tr>
     <tr>
+      <td class='row_title'>Site Region:</td> 
+      <td class='row_data'><input type="hidden" name="site[region]" value="{$site.region}">{$site.region}</td>
+    </tr>
+    <tr>
       <td class='row_title'>Site Location Map URL:</td> 
       <td class='row_data'><input type="hidden" name="site[location_url]" value="{$site.location_url}">{$site.location_url}</td>
     </tr>
