--- a/src/templates/en_CA/Field/view.tmpl
+++ b/src/templates/en_CA/Field/view.tmpl
@@ -1,6 +1,6 @@
 {include file="common/basic_header.tmpl"}
 
-<h1>{$field.site_name} {$field.num}</h1>
+<h1>{$field.site_name} {$field.num} ({$field.site_code}{$field.num})</h1>
 
 <table border="0" cellpadding="3" cellspacing="0">
   <tr>
@@ -26,7 +26,7 @@
         <td class='booking_item'>
           {foreach name=leagues from=$booking.leagues item=league}
             &raquo;&nbsp;{$league.name} [&nbsp;<a href="{$app_cgi_location}?op=league_view&id={$league.league_id}">view league</a> {if $perm_field_assign}
-				    | <A href="{$app_cgi_location}?op=field_unassign&id={$field_id}&league_id={$league.league_id}&day={$booking.day}">delete booking</a>
+				    | <A href="{$app_cgi_location}?op=field_unassign&id={$field.field_id}&league_id={$league.league_id}&day={$booking.day}">delete booking</a>
             {/if}
           ]<br>
           {foreachelse}
@@ -35,7 +35,7 @@
         </td>
         <td class='booking_item' valign="top">
         {if $perm_field_assign}
-					[ <A href="{$app_cgi_location}?op=field_assign&id={$field_id}&day={$booking.day}">add new booking</a> ]
+					[ <A href="{$app_cgi_location}?op=field_assign&id={$field.field_id}&day={$booking.day}">add new booking</a> ]
         {else}
           &nbsp;
         {/if}
