Mack's doc updates

--- a/src/templates/en_CA/common/basic_footer.tmpl
+++ b/src/templates/en_CA/common/basic_footer.tmpl
@@ -1,8 +1,10 @@
 <p />
 <hr noshade />
-<div align="right">
+<table border="0" width="100%">
+<tr><td><a href="howto.html" target="_new"><b><font color="red">Help</font></b></a></td>
+<td align="right">
 <i>Powered by <a href="http://www.dmo.ca/projects/leaguerunner/">Leaguerunner</a></i>
-</div>
+</td></tr></table>
     </td>  
   </tr>
 </table>
