Fix two minor bugs with site/field displaying, noticed during rollout

--- a/src/templates/en_CA/Site/view.tmpl
+++ b/src/templates/en_CA/Site/view.tmpl
@@ -17,6 +17,10 @@
       <td class='row_data'>{$site.code}</td>
     </tr>
     <tr>
+      <td class='row_title'>Region:</td> 
+      <td class='row_data'>{$site.region}</td>
+    </tr>
+    <tr>
       <td class='row_title' valign='top'>Site Directions:</td> 
       <td class='row_data'>{$site.directions}</td>
     </tr>
