--- a/src/templates/en_CA/Field/view.tmpl
+++ b/src/templates/en_CA/Field/view.tmpl
@@ -8,6 +8,10 @@
     <td class='row_data'> {$field.site_name} ({$field.site_code}) [ <a href="{$app_cgi_location}?op=site_view&id={$field.site_id}">view</a> ]</td>
   </tr>
   <tr>
+    <td class='row_title'>Status:</td>
+    <td class='row_data'>{$field.status}</td>
+  </tr>
+  <tr>
     <td class='row_title' valign='top'>Assignments:</td>
     <td class='row_data'>
       <table width="100%" cellspacing="0" cellpadding="3">
