--- a/src/templates/en_CA/League/schedule.tmpl
+++ b/src/templates/en_CA/League/schedule.tmpl
@@ -12,7 +12,7 @@
       &nbsp;
     {else}
       {if $perm_edit_schedule and $week.editable}
-        <a href="{$app_cgi_location}?op=league_schedule_view&id={$league_id}&week_id={$week.id}">edit week</a>
+        <a class="topbarlink" href="{$app_cgi_location}?op=league_schedule_view&id={$league_id}&week_id={$week.id}">edit week</a>
       {/if}
     {/if}
     </td>
@@ -107,7 +107,7 @@
 			Not yet scheduled.
       {/if}
     </td>
-    <td><a href="{$app_cgi_location}?op=field_view&id={$game.field_id}">{$game.field_name}</a>&nbsp;</td>
+    <td><a href="{$app_cgi_location}?op=site_view&id={$game.site_id}">{$game.field_code}</a>&nbsp;</td>
     <td>{$game.home_score}</td>
     <td>{$game.away_score}</td>
     {if $game.default}
