- field viewing link should now display site_view, not field_view

--- a/src/templates/en_CA/Team/schedule_view.tmpl
+++ b/src/templates/en_CA/Team/schedule_view.tmpl
@@ -18,7 +18,7 @@
     <td class="schedule_item">{$game.date}</td>
     <td class="schedule_item">{$game.time}</td>
     <td class="schedule_item"><a href="{$app_cgi_location}?op=team_view&id={$game.opponent_id}">{$game.opponent_name}</a>&nbsp;</td>
-    <td class="schedule_item"><a href="{$app_cgi_location}?op=field_view&id={$game.field_id}">{$game.field_name}</a>&nbsp;</td>
+    <td class="schedule_item"><a href="{$app_cgi_location}?op=site_view&id={$game.site_id}">{$game.field_code}</a>&nbsp;</td>
     <td class="schedule_item">({$game.home_away})&nbsp;</td>
     <td class="schedule_item">
       {if $game.score_type == 'final'}
