- cleanup to duplicate-booking check to allow doubleheaders - fix nasty bug where blank games in the schedule didn't get rendered, due   to an improper table join.

--- a/src/templates/en_CA/League/schedule.tmpl
+++ b/src/templates/en_CA/League/schedule.tmpl
@@ -107,7 +107,7 @@
 			Not yet scheduled.
       {/if}
     </td>
-    <td><a href="{$app_cgi_location}?op=site_view&id={$game.site_id}">{$game.field_code}</a>&nbsp;</td>
+    <td><a href="{$app_cgi_location}?op=site_view&id={$game.site_id}">{$game.field_name}</a>&nbsp;</td>
     <td>{$game.home_score}</td>
     <td>{$game.away_score}</td>
     {if $game.default}
