--- a/src/templates/en_CA/Menu.tmpl
+++ b/src/templates/en_CA/Menu.tmpl
@@ -62,7 +62,7 @@
         {if $league.allow_schedule == 'Y'}
         <td class="menu_item"><a href="{$app_cgi_location}?op=league_schedule_view&id={$league.id}">schedule</a></td>
         <td class="menu_item"><a href="{$app_cgi_location}?op=league_standings&id={$league.id}">standings</a></td>
-        <td class="menu_item"><a href="{$app_cgi_location}?op=league_score_verify&id={$league.id}">approve scores</a></td>
+        <td class="menu_item"><a href="{$app_cgi_location}?op=league_verifyscores&id={$league.id}">approve scores</a></td>
         {else}
         <td colspan='3' class='menu_item'>&nbsp;</td>
         {/if}
