OCUA-local modifications to templates.  Checking in because it's easier to track changes this way.

--- a/src/templates/en_CA/Game/score_submit_form.tmpl
+++ b/src/templates/en_CA/Game/score_submit_form.tmpl
@@ -43,7 +43,7 @@
     <td class='schedule_title'>Defaulted?</td>
     <td class='schedule_title'>Your Score Entry</td>
     <td class='schedule_title'>Opponent's Score Entry</td>
-    <td class='schedule_title'>SOTG</td>
+    <td class='schedule_title'>Spirit Score</td>
   </tr>
   <tr>
     <td class='row_title'>{$my_name}:</td> 
@@ -75,6 +75,7 @@
         <option>2
         <option>1
       </select>
+      <font size='-2'>(<a href="/leagues/spirit_guidelines.html" target="_new">spirit guideline</a>)</font>
     </td>
   </tr>
 </table>
