--- a/src/templates/en_CA/Login.tmpl
+++ b/src/templates/en_CA/Login.tmpl
@@ -25,6 +25,20 @@
     <a href="{$app_cgi_location}?op=person_forgotpassword">Forgot your password?</a> | <A HREF="{$app_cgi_location}?op=person_create">Create New Account</a>
   </td>
 </tr>
+<tr>
+<td colspan='2'><font size='-2'>
+<b>Note 1:</b> Cookies are required for use of the system.  If you receive an error indicating you 
+have an invalid session then cookies may be turned off in your browser.<br />
+<br />
+<b>Note 2:</b> Your account from last year (2002 Summer or Fall seasons, or
+2003 Indoor) will not work.  If you have not created a new account this year,
+you will need to do so.
+<br />
+<i>We are having intermittent problems where user's initial passwords are not being stored properly. 
+If you cannot login after receiving your Account Activiation notification, try getting a new 
+password emailed to you (click on "Forgot your password?").</i>
+</font></td>
+</tr>
 </table>
 <input type='hidden' name='op' value='login'>
 </form>
